--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-loader": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
+    "react-daisyui": "^2.4.7",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6"
   },
