--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nodemon": "^2.0.20",
+    "pg": "^8.8.0",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -38,6 +39,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/cors": "^2.8.12",
     "@types/node": "^18.11.9",
+    "@types/pg": "^8.6.5",
     "@types/react-dom": "^18.0.8",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
