--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
