--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "daisyui": "^2.42.1",
     "express": "^4.16.3",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "postcss-loader": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-daisyui": "^2.4.7",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
