--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,7 +100,7 @@
       // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
       "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
     },
-    "include": ["client/**/*", "server/**/*", "globals.d.ts"],
+    "include": ["server/**/*", "globals.d.ts"],
     "exclude": ["node_modules"]
   }
   
