--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.9",
@@ -56,6 +57,7 @@
     "autoprefixer": "^10.4.13",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "bcrypt": "^5.1.0",
     "concurrently": "^7.6.0",
     "css-loader": "^6.7.2",
     "eslint": "^5.6.1",
